--- a/TIMER_project/Objects/timer_test_project.htm
+++ b/TIMER_project/Objects/timer_test_project.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\timer_test_project.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\timer_test_project.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Tue Jan 24 13:41:49 2023
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6190004: Last Updated: Mon Jan 30 16:37:37 2023
 <BR><P>
 <H3>Maximum Stack Usage =        112 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -409,6 +409,14 @@ Global Symbols
 
 <P><STRONG><a name="[80]"></a>__rt_heap_expand$2region</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, heapauxi.o(.text), UNUSED)
 
+<P><STRONG><a name="[81]"></a>__user_libspace</STRONG> (Thumb, 8 bytes, Stack size 0 bytes, libspace.o(.text), UNUSED)
+
+<P><STRONG><a name="[46]"></a>__user_perproc_libspace</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, libspace.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[3c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__user_setup_stackheap
+</UL>
+
+<P><STRONG><a name="[82]"></a>__user_perthread_libspace</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, libspace.o(.text), UNUSED)
+
 <P><STRONG><a name="[3c]"></a>__user_setup_stackheap</STRONG> (Thumb, 74 bytes, Stack size 8 bytes, sys_stackheap_outer.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8 + Unknown Stack Size
 <LI>Call Chain = __user_setup_stackheap
@@ -427,14 +435,6 @@ Global Symbols
 </UL>
 <BR>[Called By]<UL><LI><a href="#[3f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__rt_entry_main
 </UL>
-
-<P><STRONG><a name="[81]"></a>__user_libspace</STRONG> (Thumb, 8 bytes, Stack size 0 bytes, libspace.o(.text), UNUSED)
-
-<P><STRONG><a name="[46]"></a>__user_perproc_libspace</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, libspace.o(.text))
-<BR><BR>[Called By]<UL><LI><a href="#[3c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__user_setup_stackheap
-</UL>
-
-<P><STRONG><a name="[82]"></a>__user_perthread_libspace</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, libspace.o(.text), UNUSED)
 
 <P><STRONG><a name="[45]"></a>_sys_exit</STRONG> (Thumb, 8 bytes, Stack size 0 bytes, sys_exit.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__rt_exit_exit
@@ -494,9 +494,9 @@ Global Symbols
 <P><STRONG><a name="[4b]"></a>i2c_readMULT</STRONG> (Thumb, 334 bytes, Stack size 24 bytes, _i2c.o(.text.i2c_readMULT))
 <BR><BR>[Stack]<UL><LI>Max Depth = 24<LI>Call Chain = i2c_readMULT
 </UL>
-<BR>[Calls]<UL><LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;i2c_stop
-<LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;disableRX_DMA
+<BR>[Calls]<UL><LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;disableRX_DMA
 <LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;enableRX_DMA
+<LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;i2c_stop
 </UL>
 <BR>[Called By]<UL><LI><a href="#[52]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;recordAccelRegisters
 </UL>
@@ -583,15 +583,15 @@ Local Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[4f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;initI2C1
 </UL>
 
+<P><STRONG><a name="[4e]"></a>i2c_stop</STRONG> (Thumb, 26 bytes, Stack size 0 bytes, _i2c.o(.text.i2c_stop))
+<BR><BR>[Called By]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;i2c_readMULT
+</UL>
+
 <P><STRONG><a name="[4c]"></a>enableRX_DMA</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, _i2c.o(.text.enableRX_DMA))
 <BR><BR>[Called By]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;i2c_readMULT
 </UL>
 
 <P><STRONG><a name="[4d]"></a>disableRX_DMA</STRONG> (Thumb, 28 bytes, Stack size 0 bytes, _i2c.o(.text.disableRX_DMA))
-<BR><BR>[Called By]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;i2c_readMULT
-</UL>
-
-<P><STRONG><a name="[4e]"></a>i2c_stop</STRONG> (Thumb, 26 bytes, Stack size 0 bytes, _i2c.o(.text.i2c_stop))
 <BR><BR>[Called By]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;i2c_readMULT
 </UL>
 
