I'm working on bno055

--- a/TeamOrionSensorTests/MDK-ARM/TeamOrionSensorTests/TeamOrionSensorTests.build_log.htm
+++ b/TeamOrionSensorTests/MDK-ARM/TeamOrionSensorTests/TeamOrionSensorTests.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\myfolder\TeamOrionSensorTests\MDK-ARM\TeamOrionSensorTests.uvprojx
+D:\myfolder\stm32\mySTM32project-repo\TeamOrionSensorTests\MDK-ARM\TeamOrionSensorTests.uvprojx
 Project File Date:  02/13/2023
 
 <h2>Output:</h2>
@@ -29,27 +29,27 @@ Project File Date:  02/13/2023
 Rebuild target 'TeamOrionSensorTests'
 assembling startup_stm32f103xb.s...
 compiling dma.c...
-compiling stm32f1xx_hal_msp.c...
-compiling gpio.c...
-compiling spi.c...
 compiling stm32f1xx_it.c...
-compiling usart.c...
-compiling main.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_hal_rcc_ex.c...
 compiling i2c.c...
-compiling stm32f1xx_hal_gpio.c...
+compiling gpio.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_msp.c...
+compiling spi.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling usart.c...
 compiling stm32f1xx_hal.c...
+compiling main.c...
+compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling stm32f1xx_hal_tim.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_pwr.c...
 compiling stm32f1xx_hal_cortex.c...
-compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_flash_ex.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_dma.c...
 compiling bno055.c...
 compiling stm32f1xx_hal_uart.c...
 compiling stm32f1xx_hal_spi.c...
