--- a/TeamOrionSensorTests/MDK-ARM/TeamOrionSensorTests/TeamOrionSensorTests.build_log.htm
+++ b/TeamOrionSensorTests/MDK-ARM/TeamOrionSensorTests/TeamOrionSensorTests.build_log.htm
@@ -3,61 +3,61 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.37.0.0
+IDE-Version: µVision V5.38.0.0
 Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Yusuf Yigitbasi, Kellesi, LIC=----
+License Information: Yusuf Yigitbasi, Hacettepe, LIC=----
  
 Tool Versions:
-Toolchain:       MDK-Lite  Version: 5.37.0.0
+Toolchain:       MDK-Lite  Version: 5.38.0.0
 Toolchain Path:  C:\Keil_v5\ARM\ARMCLANG\Bin
-C Compiler:      ArmClang.exe V6.18
-Assembler:       Armasm.exe V6.18
-Linker/Locator:  ArmLink.exe V6.18
-Library Manager: ArmAr.exe V6.18
-Hex Converter:   FromElf.exe V6.18
-CPU DLL:         SARMCM3.DLL V5.37.0.0
+C Compiler:      ArmClang.exe V6.19
+Assembler:       Armasm.exe V6.19
+Linker/Locator:  ArmLink.exe V6.19
+Library Manager: ArmAr.exe V6.19
+Hex Converter:   FromElf.exe V6.19
+CPU DLL:         SARMCM3.DLL V5.38.0.0
 Dialog DLL:      DCM.DLL V1.17.5.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
-Dialog DLL:      TCM.DLL V1.56.1.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
+Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\mystm32Project\mySTM32project-repo\TeamOrionSensorTests\MDK-ARM\TeamOrionSensorTests.uvprojx
-Project File Date:  02/22/2023
+D:\myfolder\stm32\mySTM32project-repo\TeamOrionSensorTests\MDK-ARM\TeamOrionSensorTests.uvprojx
+Project File Date:  02/25/2023
 
 <h2>Output:</h2>
-*** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
+*** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'TeamOrionSensorTests'
-compiling gpio.c...
-assembling startup_stm32f103xb.s...
-compiling main.c...
-compiling dma.c...
-compiling i2c.c...
-compiling spi.c...
-compiling usart.c...
 compiling stm32f1xx_it.c...
-compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_hal_gpio_ex.c...
+assembling startup_stm32f103xb.s...
+compiling dma.c...
 compiling stm32f1xx_hal.c...
+compiling usart.c...
+compiling spi.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_msp.c...
+compiling gpio.c...
+compiling i2c.c...
 compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_rcc.c...
+compiling main.c...
 compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_cortex.c...
 compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_cortex.c...
 compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_i2c.c...
-compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_tim.c...
 compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_exti.c...
 compiling system_stm32f1xx.c...
-compiling stm32f1xx_hal_spi.c...
-compiling stm32f1xx_hal_uart.c...
+compiling I2C_sensorDriver.c...
 compiling bno055.c...
 compiling _BMP388.c...
-compiling I2C_sensorDriver.c...
+compiling stm32f1xx_hal_uart.c...
+compiling stm32f1xx_hal_spi.c...
+compiling stm32f1xx_hal_i2c.c...
 linking...
-Program Size: Code=22904 RO-data=1116 RW-data=36 ZI-data=2612  
+Program Size: Code=28388 RO-data=1564 RW-data=32 ZI-data=2704  
 FromELF: creating hex file...
 "TeamOrionSensorTests\TeamOrionSensorTests.axf" - 0 Error(s), 0 Warning(s).
 
@@ -76,14 +76,14 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   ./RTE/_TeamOrionSensorTests
-  C:/Users/yusuf/AppData/Local/Arm/Packs/ARM/CMSIS/5.9.0/CMSIS/Core/Include
-  C:/Users/yusuf/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include
+  C:/Users/YUSUF/AppData/Local/Arm/Packs/ARM/CMSIS/5.9.0/CMSIS/Core/Include
+  C:/Users/YUSUF/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.4.0/Device/Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:09
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
