--- a/TeamOrionSensorTests/MDK-ARM/TeamOrionSensorTests/TeamOrionSensorTests.build_log.htm
+++ b/TeamOrionSensorTests/MDK-ARM/TeamOrionSensorTests/TeamOrionSensorTests.build_log.htm
@@ -22,42 +22,43 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 D:\myfolder\stm32\mySTM32project-repo\TeamOrionSensorTests\MDK-ARM\TeamOrionSensorTests.uvprojx
-Project File Date:  03/14/2023
+Project File Date:  03/26/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'TeamOrionSensorTests'
-compiling dma.c...
-compiling spi.c...
-compiling main.c...
 assembling startup_stm32f103xb.s...
-compiling usart.c...
-compiling stm32f1xx_hal_rcc_ex.c...
+compiling spi.c...
 compiling i2c.c...
-compiling stm32f1xx_hal_msp.c...
-compiling gpio.c...
-compiling stm32f1xx_hal_gpio_ex.c...
 compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_msp.c...
+compiling main.c...
+compiling usart.c...
 compiling stm32f1xx_it.c...
+compiling dma.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling gpio.c...
 compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_pwr.c...
 compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_tim.c...
 compiling stm32f1xx_hal_tim_ex.c...
-compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_flash_ex.c...
 compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_exti.c...
 compiling bno055.c...
 compiling I2C_sensorDriver.c...
 compiling _BMP388.c...
+compiling gps.c...
 compiling stm32f1xx_hal_spi.c...
 compiling stm32f1xx_hal_uart.c...
 compiling stm32f1xx_hal_i2c.c...
 linking...
-Program Size: Code=27324 RO-data=436 RW-data=16 ZI-data=2584  
+Program Size: Code=26980 RO-data=1020 RW-data=12 ZI-data=2684  
 FromELF: creating hex file...
 "TeamOrionSensorTests\TeamOrionSensorTests.axf" - 0 Error(s), 0 Warning(s).
 
